Updated lamprealm + added a link to index

--- a/lamprealm.html
+++ b/lamprealm.html
@@ -23,5 +23,15 @@ body {
             <li>united states of america</li>
         </ul>
     </body>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/1280px-Flag_of_the_United_States.svg.png">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/1280px-Flag_of_the_United_States.svg.png" width="180" height="100">
+    <p>
+        Important quotes: <br>
+        "i do not like anything about this" - blucheese <br>
+        "no" - half <br>
+        "were you born an asian or did your parents raise you that way" - mlghost <br>
+    </p>
+
+    <h2> Reading is critical </h2>
+    <img src= http://ichef.bbci.co.uk/wwfeatures/wm/live/1280_640/images/live/p0/2v/dp/p02vdpfn.jpg width="200" height="200">
+    
 </html>
