Lamp content moved to appropriately named folder, 2 new html files created in this folder.

--- a/uselesscontent/lamprealm.html
+++ b/uselesscontent/lamprealm.html
@@ -14,13 +14,26 @@ body {
         <p> enjoy your stay </p>
         <img src="https://i.imgur.com/F6hLcd4.png" width="680" height="386">
     </body>
-    <button>click here to join the winner gang</button>
+    <button>click here to click</button>
+    <form>
+        <input type="button" value="click here to join the winner gang"
+        onclick="window.location.href='winner.html'"/>
+    </form> <br>
+    <form>
+        <input type="button" value="click here to lose instantly"
+        onclick="window.location.href='loser.html'"/>
+    </form>
+    
     <body>
         <h2> List of things that are important:</h2>
         <ul>
             <li>lamp</li>
             <li>elite gamers</li>
             <li>united states of america</li>
+            <form>
+                <input type="button" value="click to appreciate america" 
+                onclick="window.location.href='https://youtu.be/vPKp29Luryc'"/>
+            </form>
         </ul>
     </body>
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/1280px-Flag_of_the_United_States.svg.png" width="180" height="100">
