made big change to big thing

--- a/index.html
+++ b/index.html
@@ -10,8 +10,68 @@
         <title>Elite Gamers</title>
     </head>
     <body>
-        <p>ghost smeels</p>
-        <a href="uselesscontent/lamprealm.html">Enter Lamp's Realm</a>
+        <div class="container">
+            <div class="text-center">
+                <img src="assets/logo.png" width="256px" height="256px">
+            </div>
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navdrop" aria-controls="navdrop" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navdrop">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="uselesscontent/lamprealm.html">Lamp's Realm</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <h1 class="text-center">Welcome</h1>
+            <p>please dont</p>
+
+            <h1 class="text-center">About the Gamers</h1>
+            <div class="row">
+                <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/pfps/ghost.png" alt="MLGhost">
+                        <div class="card-body">
+                            <h5 class="card-title">MLGhost</h5>
+                            <p class="card-text">Smeels.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/pfps/cheese.png" alt="blucheese">
+                        <div class="card-body">
+                            <h5 class="card-title">Blucheese</h5>
+                            <p class="card-text">Expert in most things harem.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/pfps/half.png" alt="half">
+                        <div class="card-body">
+                            <h5 class="card-title">Half</h5>
+                            <p class="card-text">Jewish.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/pfps/lamp.png" alt="lamp">
+                        <div class="card-body">
+                            <h5 class="card-title">Lamp</h5>
+                            <p class="card-text">Doesn't exist.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
