i dont like something i did

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/pfps/cheese.png" alt="blucheese">
                         <div class="card-body">
-                            <h5 class="card-title">Blucheese</h5>
+                            <h5 class="card-title">blucheese</h5>
                             <p class="card-text">Expert in most things harem.</p>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/pfps/half.png" alt="half">
                         <div class="card-body">
-                            <h5 class="card-title">Half</h5>
+                            <h5 class="card-title">half</h5>
                             <p class="card-text">Jewish.</p>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/pfps/lamp.png" alt="lamp">
                         <div class="card-body">
-                            <h5 class="card-title">Lamp</h5>
+                            <h5 class="card-title">lamp</h5>
                             <p class="card-text">Doesn't exist.</p>
                         </div>
                     </div>
