--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
         <title>Elite Gamers</title>
     </head>
-    <body>
+    <body class="bg-light">
         <div class="container">
             <div class="text-center">
                 <img src="assets/logo.png" width="256px" height="256px">
