--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <link rel="icon" type="image/png" href="assets/logo.png">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
+        <link rel="stylesheet" href="assets/css/dark-theme.css">
+
         <title>Elite Gamers</title>
     </head>
-    <body class="bg-light">
+    <body class="body-dark text-white">
         <div class="container">
             <div class="text-center">
                 <img src="assets/logo.png" width="256px" height="256px">
@@ -21,10 +23,10 @@
                 <div class="collapse navbar-collapse" id="navdrop">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link text-white" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="uselesscontent/lamprealm.html">Lamp's Realm</a>
+                            <a class="nav-link text-white" href="uselesscontent/lamprealm.html">Lamp's Realm</a>
                         </li>
                     </ul>
                 </div>
@@ -35,7 +37,7 @@
             <h1 class="text-center">About the Gamers</h1>
             <div class="row">
                 <div class="col-sm-12 col-md-3">
-                    <div class="card">
+                    <div class="card text-white bg-dark">
                         <img class="card-img-top" src="assets/pfps/ghost.png" alt="MLGhost">
                         <div class="card-body">
                             <h5 class="card-title">MLGhost</h5>
@@ -44,7 +46,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-3">
-                    <div class="card">
+                    <div class="card text-white bg-dark">
                         <img class="card-img-top" src="assets/pfps/cheese.png" alt="blucheese">
                         <div class="card-body">
                             <h5 class="card-title">blucheese</h5>
@@ -53,7 +55,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-3">
-                    <div class="card">
+                    <div class="card text-white bg-dark">
                         <img class="card-img-top" src="assets/pfps/half.png" alt="half">
                         <div class="card-body">
                             <h5 class="card-title">half</h5>
@@ -62,7 +64,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-3">
-                    <div class="card">
+                    <div class="card text-white bg-dark">
                         <img class="card-img-top" src="assets/pfps/lamp.png" alt="lamp">
                         <div class="card-body">
                             <h5 class="card-title">lamp</h5>
