--- a/index.html
+++ b/index.html
@@ -16,25 +16,23 @@
             <div class="text-center">
                 <img src="assets/logo.png" width="256px" height="256px">
             </div>
-            <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navdrop" aria-controls="navdrop" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navdrop">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="uselesscontent/lamprealm.html">Lamp's Realm</a>
+                            <a class="nav-link active" href="index.html">Home</a>
                         </li>
                     </ul>
                 </div>
             </nav>
-            <h1 class="text-center">Welcome</h1>
-            <p>please dont</p>
 
-            <h1 class="text-center">About the Gamers</h1>
+            <h1 class="text-center mb-3">Welcome</h1>
+            <p>haha nice</p>
+
+            <h1 class="text-center mb-3">The Gamers</h1>
             <div class="row">
                 <div class="col-sm-12 col-md-3">
                     <div class="card text-white bg-dark">
@@ -42,6 +40,7 @@
                         <div class="card-body">
                             <h5 class="card-title">MLGhost</h5>
                             <p class="card-text">Smeels.</p>
+                            <a href="#" class="btn btn-secondary col-12">Enter their realm.</a>
                         </div>
                     </div>
                 </div>
@@ -51,6 +50,7 @@
                         <div class="card-body">
                             <h5 class="card-title">blucheese</h5>
                             <p class="card-text">Expert in most things harem.</p>
+                            <a href="#" class="btn btn-secondary col-12">Enter their realm.</a>
                         </div>
                     </div>
                 </div>
@@ -60,6 +60,7 @@
                         <div class="card-body">
                             <h5 class="card-title">half</h5>
                             <p class="card-text">Jewish.</p>
+                            <a href="#" class="btn btn-secondary col-12">Enter their realm.</a>
                         </div>
                     </div>
                 </div>
@@ -69,6 +70,7 @@
                         <div class="card-body">
                             <h5 class="card-title">lamp</h5>
                             <p class="card-text">Doesn't exist.</p>
+                            <a href="uselesscontent/lamprealm.html" class="btn btn-secondary col-12">Enter their realm.</a>
                         </div>
                     </div>
                 </div>
