--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
                 <div class="collapse navbar-collapse" id="navdrop">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="index.html">Home</a>
+                            <a class="nav-link" onclick="load('test');">Home</a>
                         </li>
                     </ul>
                 </div>
             </nav>
 
+            <div id="content">
+                <p>testing something that might work when hosted dont worry</p>               
+            </div>
+<!-- 
             <h1 class="text-center mb-3">Welcome</h1>
             <p>haha nice</p>
 
@@ -74,11 +78,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="assets/js/pageloader.js" type="text/javascript"></script>
     </body>
 </html>
