--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
-        <link rel="icon" type="image/png" href="assets/logo.png">
+        <link rel="icon" type="image/png" href="assets/img/logo.png">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
+        <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="assets/css/dark-theme.css">
 
         <title>Elite Gamers</title>
     </head>
     <body class="body-dark text-white">
+        <div class="loader">
+            <img src="assets/img/loading.gif">
+        </div>
         <div class="container">
             <div class="text-center">
-                <img src="assets/logo.png" width="256px" height="256px">
+                <img src="assets/img/logo.png" width="256px" height="256px">
             </div>
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navdrop" aria-controls="navdrop" aria-expanded="false" aria-label="Toggle navigation">
