--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-sm-12 col-md-3">
         <div class="card text-white bg-dark">
-            <img class="card-img-top" src="assets/pfps/ghost.png" alt="MLGhost">
+            <img class="card-img-top" src="assets/img/ghost.png" alt="MLGhost">
             <div class="card-body">
                 <h5 class="card-title">MLGhost</h5>
                 <p class="card-text">Smeels.</p>
@@ -15,7 +15,7 @@
     </div>
     <div class="col-sm-12 col-md-3">
         <div class="card text-white bg-dark">
-            <img class="card-img-top" src="assets/pfps/cheese.png" alt="blucheese">
+            <img class="card-img-top" src="assets/img/cheese.png" alt="blucheese">
             <div class="card-body">
                 <h5 class="card-title">blucheese</h5>
                 <p class="card-text">Expert in most things harem.</p>
@@ -25,7 +25,7 @@
     </div>
     <div class="col-sm-12 col-md-3">
         <div class="card text-white bg-dark">
-            <img class="card-img-top" src="assets/pfps/half.png" alt="half">
+            <img class="card-img-top" src="assets/img/half.png" alt="half">
             <div class="card-body">
                 <h5 class="card-title">half</h5>
                 <p class="card-text">Jewish.</p>
@@ -35,7 +35,7 @@
     </div>
         <div class="col-sm-12 col-md-3">
             <div class="card text-white bg-dark">
-                <img class="card-img-top" src="assets/pfps/lamp.png" alt="lamp">
+                <img class="card-img-top" src="assets/img/lamp.png" alt="lamp">
                 <div class="card-body">
                      <h5 class="card-title">lamp</h5>
                     <p class="card-text">Doesn't exist.</p>
