--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navdrop">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" onclick="load('test.html');">Home</a>
+                            <a class="nav-link" onclick="load('test');">Home</a>
                         </li>
                     </ul>
                 </div>
